tests/errors/fun_ptr_of_local_error/fun_ptr_of_local_error.c
#error fun_ptr_of_local_error.fun_ptr_of_local_error:8:3 Pointer to a local function is unavailable since it might capture local variables.
#error fun_ptr_of_local_error.fun_ptr_of_local_error:13:3 Pointer to a local function is unavailable since it might capture local variables.
#error fun_ptr_of_local_error.fun_ptr_of_local_error:17:3 Pointer to a local function is unavailable since it might capture local variables.
